<resources>
    <string name="app_name">Expenses Manager</string>

    <string name="home">Дом</string>
    <string name="car">Автомобил</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="list_is_empty">Списъкът е празен</string>
    <string name="home_payment_text">Плащане на %1$s за месец %2$s</string>
    <string name="car_payment_text">Плащане на %1$s</string>
    <string name="placeholder_1">%1$s</string>
    <string name="placeholder_2">%1$s %2$s</string>
    <string name="placeholder_3">%1$s %2$s %3$s</string>
    <string name="job">Работа</string>
    <string name="paid_sum">Платена сума</string>
    <string name="cancel">Отказ</string>
    <string name="not_paid">Не сте заплатили!</string>
    <string name="saturday">събота</string>
    <string name="sunday">неделя</string>
    <string name="press_one_more_time_to_exit">Натиснете още веднъж за изход</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
