<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent_rounded"
            android:drawableEnd="@drawable/right_arrow_orange"
            android:fontFamily="sans-serif-light"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/home"
            android:textColor="@color/Orange"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <Button
            android:id="@+id/carButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent_rounded"
            android:drawableEnd="@drawable/right_arrow_blue"
            android:fontFamily="sans-serif-light"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/car"
            android:textColor="@color/Blue"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <Button
            android:id="@+id/jobButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent_rounded"
            android:drawableEnd="@drawable/right_arrow_green"
            android:fontFamily="sans-serif-light"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/job"
            android:textColor="@color/Green"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent_rounded"
            android:drawableEnd="@drawable/right_arrow_red"
            android:fontFamily="sans-serif-light"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/settings"
            android:textColor="@color/Red"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</LinearLayout>