<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3.5"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/home_payment_text"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:layout_weight="3"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="start|center_vertical"
            android:text="@string/paid_sum"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />

        <EditText
            android:id="@+id/sumEditText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/gray"
            android:textColorHighlight="@color/gray"
            android:textColorLink="@color/gray_darkest"
            android:textCursorDrawable="@drawable/cursor_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent_rounded"
            android:fontFamily="sans-serif-light"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent_rounded"
            android:fontFamily="sans-serif-light"
            android:text="@android:string/ok"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>